backend.log

> forager-rcm-backend@1.0.0 dev
> ts-node src/index.ts

/home/ubuntu/forager-rcm-backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/index.ts(18,10): error TS2305: Module '"./middleware/auth"' has no exported member 'authenticate'.

    at createTSError (/home/ubuntu/forager-rcm-backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/ubuntu/forager-rcm-backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/ubuntu/forager-rcm-backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/ubuntu/forager-rcm-backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/ubuntu/forager-rcm-backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1699:10
    at Object.require.extensions.<computed> [as .ts] (/home/ubuntu/forager-rcm-backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2305 ]
}
